--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ header {
     align-items: center; 
     padding: 1rem;
     height: 80px;
+
 }
 
 header .logo-container, header .profile-btns {
@@ -121,6 +122,9 @@ section .section__heading .section__heading__text {
     padding: .5rem 1rem; 
     border-radius: 2rem;
     margin-top: 1rem;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
 
 .btn-outline { 
@@ -132,6 +136,25 @@ section .section__heading .section__heading__text {
     color: #ffffff;
 }
 
+.btn-solid-dark {
+    background: #121212;
+    color: #fef0e5;
+}
+
+.text-input { 
+    padding: .5rem 1rem; 
+    border-radius: 15px;
+    outline: none; 
+    border: 1px solid #12121230;
+}
+
+input { 
+    display: block;
+}
+
+.btn-sm {
+    transform: scale(0.8);
+}
 
 
 
